...
    currentValue: V?,
    fieldDefinition: FieldDefinition
): FieldValidationResult {
  return if (showValidationErrors && currentValue != null) {
    FieldValidator.validate(currentValue, fieldDefinition)
  } else if (showValidationErrors && fieldDefinition.required) {
    FieldValidationResult.Invalid(listOf("This field is required"))
  } else {
    FieldValidationResult.Valid
  }
}

/**
...
